Zend/zend_globals.h
@@ -88,6 +88,7 @@ struct _zend_compiler_globals {
 	char *compiled_filename;
 
 	int zend_lineno;
+	int shebang_len;
 
 	char *heredoc;
 	int heredoc_len;
